--- a/src/01-color-switcher.html
+++ b/src/01-color-switcher.html
@@ -3,20 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework 9</title>
+    <title>Color switcher</title>
     <link rel="stylesheet" href="css/common.css" />
   </head>
   <body>
+    <p><a href="index.html">Go back</a></p>
     <ul class="list">
       <li class="list__item">
-        <a class="list__link" href="01-color-switcher.html">Color switcher</a>
+        <button class="list__btn type="button" data-start>Start</button>
       </li>
       <li class="list__item">
-        <a class="list__link" href="02-timer.html">Countdown timer</a>
-      </li>
-      <li class="list__item">
-        <a class="list__link" href="03-promises.html">Promise generator</a>
+        <button class="list__btn type="button" data-stop>Stop</button>
       </li>
     </ul>
+
+    <script src="js/01-color-switcher.js" type="module"></script>
   </body>
 </html>
